<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lib"
    tools:context=".View.AdminActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#C17300"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="GÜNAYDIN"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="EMRE"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#C17300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow>

            <TextView
                android:padding="5dp"
                android:text="@string/currentuser"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:padding="5dp"
                android:text="@string/capacity"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/currentUserText"
                android:padding="5dp"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/CapacityText"
                android:padding="5dp"
                android:text="50"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A8A5A5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capacity"
                android:textColor="@color/black"
                android:textSize="24sp"></TextView>

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:hint="@string/capacityHint"
                android:inputType="number" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="2dp"
                android:onClick="changeCapacity"
                android:text="@string/change" />
        </LinearLayout>

        <Button
            android:id="@+id/Scanbutton"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:onClick="scanReservation"
            android:text="@string/scan"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Deletebutton"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:onClick="resetCurrentUser"
            android:text="@string/reset"
            android:textSize="24sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>