<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lib"
    tools:context=".View.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#453412"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:background="#C17300"
            android:textSize="44sp"
            android:text="@string/signup"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:background="#C17300"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/username"
                tools:layout_editor_absoluteX="338dp"
                tools:layout_editor_absoluteY="314dp" />

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="text"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="103dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:background="#C17300"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:src="@drawable/email"
                tools:layout_editor_absoluteX="256dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="58dp"
                tools:layout_editor_absoluteY="217dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:background="#C17300"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:src="@drawable/password"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="190dp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="61dp"
                tools:layout_editor_absoluteY="322dp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:width="200dp"
            android:height="60dp"
            android:onClick="register"
            android:text="@string/register"
            android:textSize="24sp"></Button>

        <TextView
            android:id="@+id/GoToLoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:onClick="goToLogin"
            android:text="@string/login_explanation"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>