<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lib"
    tools:context=".View.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#453412"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="44sp"
            android:background="#C17300"
            android:textColor="@color/black"
            android:text="@string/login"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:background="#C17300"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/username"
                tools:layout_editor_absoluteX="338dp"
                tools:layout_editor_absoluteY="314dp" />

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="text"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="103dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:background="#C17300"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:src="@drawable/password"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="190dp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="61dp"
                tools:layout_editor_absoluteY="322dp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:width="200dp"
            android:height="70dp"
            android:onClick="userLogin"
            android:text="@string/login"
            android:textSize="30sp"></Button>
        <TextView
            android:id="@+id/GoToSignUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:onClick="goToSignUp"
            android:text="@string/signup_explanation"
            android:textColor="@color/white"
            android:textSize="22sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>